# Advent-of-Code-2024--CPP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cpp/: Day.h
cpp/algorithms/: GridZones.h  Zone.cpp  Zone.h  ZoneFinderFloodFill.cpp  ZoneFinderFloodFill.h  ZonedCell.h
cpp/algorithms/pathfinding/: AStarPathFinder.cpp  AStarPathFinder.h  BFSPathFinder.cpp  BFSPathFinder.h  DijkstraPathFinder.cpp  DijkstraPathFinder.h  IncrementalPathFinder.cpp  IncrementalPathFinder.h  Maze.cpp  Maze.h  MazeTile.h  Node.h  PathFinder.h
cpp/core/: Grid.h  IncrementalPathFinder.cpp  Node.cpp  Node.h  Orientation.h  Pair.h  PathFinder.h  Vector2D.h  WordSearchGrid.cpp  WordSearchGrid.h
cpp/day1/: Day01.cpp  Day01.h  Day01PairBuilder.cpp  Day01PairBuilder.h
cpp/day10/: Day10.cpp  Day10.h  DiskMap.cpp  DiskMap.h  TopographicMap.cpp  TopographicMap.h
cpp/day11/: Day11.cpp  Day11.h  PebbleRow.cpp  PebbleRow.h
cpp/day12/: Day12.cpp  Day12.h  FarmGrid.cpp  FarmGrid.h  Plant.cpp  Plant.h
cpp/day13/: ClawMachine.cpp  ClawMachine.h  Day13.cpp  Day13.h
cpp/day14/: Day14.cpp  Day14.h  Robot.cpp  Robot.h
cpp/day15/: Box.h  Day15.cpp  Day15.h  DirectionQueue.cpp  DirectionQueue.h  Entity.h  Robot.h  Wall.h  Warehouse.cpp  Warehouse.h
cpp/day16/: Day16.cpp  Day16.h  Maze.cpp  Maze.h  MazeTile.cpp  MazeTile.h
cpp/day17/: ADVInstruction.h  BDVInstruction.h  BSTInstruction.h  BXCInstruction.h  BXLInstruction.h  CDVInstruction.h  ChronospatialComputer.cpp  ChronospatialComputer.h  Day17.cpp  Day17.h  Instruction.h  JNZInstruction.h  OUTInstruction.h
cpp/day18/: Byte.h  CorruptedByte.h  Day18.cpp  Day18.h  FreeByte.h  MemorySpace.cpp  MemorySpace.h
cpp/day19/: Day19.cpp  Day19.h  Pattern.h  PatternFinder.cpp  PatternFinder.h  PatternHolder.h
cpp/day2/: Day02.cpp  Day02.h  Report.cpp  Report.h
cpp/day20/: Day20.cpp  Day20.h  PatternFinder.cpp  PatternFinder.h  PatternHolder.h  RaceTrack.cpp  RaceTrack.h  RaceTrackCheatFinder.cpp  RaceTrackCheatFinder.h
cpp/day21/: NumberPad.cpp  NumberPad.h
cpp/day22/: BananaSellingUtil.h  Day22.cpp  Day22.h  SecretEvolver.cpp  SecretEvolver.h  SecretModifier.h
cpp/day3/: Computer.cpp  Computer.h  Day03.cpp  Day03.h  DoInstruction.h  DontInstruction.h  Instruction.h  MultiplyCommand.h  MultiplyInstruction.h
cpp/day4/: Day04.cpp  Day04.h  MasSearchGrid.cpp  MasSearchGrid.h  WordSearchGrid.cpp  WordSearchGrid.h
cpp/day5/: Day05.cpp  Day05.h  PageOrderingRules.cpp  PageOrderingRules.h  PageUpdate.cpp  PageUpdate.h
cpp/day6/: Day06.cpp  Day06.h  LabEntity.h  LabGrid.cpp  LabGrid.h
cpp/day7/: Day07.cpp  Day07.h  Equation.cpp  Equation.h
cpp/day8/: AntennaGrid.cpp  AntennaGrid.h  Day08.cpp  Day08.h
cpp/day9/: Day09.cpp  Day09.h  DiskMap.cpp  DiskMap.h  File.h
cpp/helper/: AOCInitializer.cpp  AOCInitializer.h  FileReader.cpp  FileReader.h  NumberUtils.cpp  NumberUtils.h  SolutionInput.cpp  SolutionInput.h  VectorUtils.cpp  VectorUtils.h
googletest/: CMakeLists.txt
googletest/algorithms/: ZoneFinderFloodFillTests.cpp  ZoneTests.cpp
googletest/algorithms/pathfinding/: AStarPathFinderTests.cpp  DijkstraPathFinderTests.cpp  MazeTests.cpp
googletest/core/: PairTests.cpp  WordSearchGridTests.cpp  WordSearchRowTests.cpp
googletest/day1/: Day01PairBuilderTests.cpp
googletest/day10/: DiskMapTests.cpp  IncrementalPathFinderTests.cpp  TopographicMapTests.cpp
googletest/day11/: PebbleRowTests.cpp
googletest/day12/: FarmGridTests.cpp
googletest/day13/: ClawMachineTests.cpp
googletest/day14/: RobotTests.cpp
googletest/day15/: DirectionQueueTests.cpp  WarehouseTests.cpp
googletest/day16/: MazeTests.cpp
googletest/day17/: ADVInstructionTests.cpp  BDVInstructionTests.cpp  BSTInstructionTests.cpp  BXCInstructionTests.cpp  BXLInstructionTests.cpp  CDVInstructionTests.cpp  ChronospatialComputerTests.cpp  JNZInstructionTests.cpp  OUTInstructionTests.cpp
googletest/day18/: MemorySpaceTests.cpp
googletest/day19/: PatternFinderTests.cpp  PatternHolderTests.cpp
googletest/day2/: ReportTests.cpp
googletest/day20/: RaceTrackCheatFinderTests.cpp  RaceTrackTests.cpp
googletest/day21/: NumberPadTests.cpp
googletest/day22/: BananaSellingUtilTests.cpp  SecretEvolverTests.cpp  SecretModifierTests.cpp
googletest/day3/: ComputerTests.cpp
googletest/day4/: MasSearchGridTests.cpp  WordSearchGridTests.cpp
googletest/day5/: PageOrderingRulesTests.cpp  PageUpdateTests.cpp
googletest/day6/: LabGridTests.cpp  LabGuardTests.cpp
googletest/day7/: EquationTests.cpp
googletest/day8/: AntennaGridTests.cpp
googletest/day9/: DiskMapTests.cpp
googletest/testHelper/: InputUtils.h
puzzle/: Day1.md  Day10.md  Day11.md  Day12.md  Day13.md  Day14.md  Day15.md  Day16.md  Day17.md  Day18.md  Day19.md  Day2.md  Day20.md  Day21.md  Day22.md  Day23.md  Day24.md  Day25.md  Day3.md  Day4.md  Day5.md  Day6.md  Day7.md  Day8.md  Day9.md
