cmake_minimum_required(VERSION 3.30.5)
# 'Google_test' is the subproject name
project(Google_tests)

set(CMAKE_CXX_STANDARD 23)

# 'lib' is the folder with Google Test sources
add_subdirectory(lib)
include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
# 'Google_Tests_run' is the target name
# 'test1.cpp test2.cpp' are source files with tests
add_executable(Google_Tests_run
        ../cpp/helper/SolutionInput.h
        ../cpp/helper/SolutionInput.cpp
        ../cpp/helper/FileReader.cpp
        ../cpp/helper/FileReader.h
        ../cpp/helper/StringUtils.cpp
        ../cpp/helper/StringUtils.h
        ../cpp/core/Pair.h
        ../cpp/day1/Day01PairBuilder.cpp
        ../cpp/day1/Day01PairBuilder.h
        ../cpp/day2/Report.cpp
        ../cpp/day2/Report.h
        core/PairTests.cpp
        day1/Day01PairBuilderTests.cpp
        day2/ReportTests.cpp
        ../cpp/day3/Computer.cpp
        ../cpp/day3/Computer.h
        ../cpp/day3/MultiplyInstruction.h
        day3/ComputerTests.cpp
        ../cpp/day3/Instruction.h
        ../cpp/day3/DoInstruction.h
        ../cpp/day3/DontInstruction.h
        ../cpp/core/WordSearchRow.cpp
        ../cpp/core/WordSearchRow.h
        ../cpp/core/WordSearchGrid.h
        ../cpp/core/WordSearchGrid.cpp
        core/WordSearchRowTests.cpp
        core/WordSearchGridTests.cpp
        testHelper/InputUtils.cpp
        testHelper/InputUtils.h
        ../cpp/day4/MasSearchGrid.cpp
        ../cpp/day4/MasSearchGrid.h
        day4/MasSearchGridTests.cpp
        helper/SolutionHelperTests.cpp
        ../cpp/day5/PageOrderingRules.cpp
        ../cpp/day5/PageOrderingRules.h
        day5/PageOrderingRulesTests.cpp
        ../cpp/day5/PageUpdate.cpp
        ../cpp/day5/PageUpdate.h
        day5/PageUpdateTests.cpp
        ../cpp/core/Grid.h
        ../cpp/day6/LabGrid.cpp
        ../cpp/day6/LabGrid.h
        day6/LabGridTests.cpp
        ../cpp/core/Orientation.h
        day6/LabGuardTests.cpp
        ../cpp/day6/LabEntity.h
        ../cpp/day8/AntennaGrid.cpp
        ../cpp/day8/AntennaGrid.h
        day8/AntennaGridTests.cpp
        ../cpp/day9/DiskMap.cpp
        ../cpp/day9/DiskMap.h
        day9/DiskMapTests.cpp
        ../cpp/day9/File.h
        ../cpp/day10/Day10.cpp
        ../cpp/day10/Day10.h
        ../cpp/day10/TopographicMap.cpp
        ../cpp/day10/TopographicMap.h
        day10/TopographicMapTests.cpp
        ../cpp/algorithms/pathfinding/Node.h
        ../cpp/algorithms/pathfinding/PathFinder.h
        ../cpp/algorithms/pathfinding/IncrementalPathFinder.cpp
        ../cpp/algorithms/pathfinding/IncrementalPathFinder.h
        day10/IncrementalPathFinderTests.cpp
        ../cpp/day7/Day07.cpp
        ../cpp/day7/Day07.h
        ../cpp/day11/Day11.h
        ../cpp/day11/Day11.cpp
        ../cpp/day12/Day12.cpp
        ../cpp/day12/Day12.h
        ../cpp/day11/PebbleRow.cpp
        ../cpp/day11/PebbleRow.h
        day11/PebbleRowTests.cpp
        ../cpp/day12/FarmGrid.cpp
        ../cpp/day12/FarmGrid.h
        ../cpp/day12/Plant.cpp
        ../cpp/day12/Plant.h
        day12/FarmGridTests.cpp
        ../cpp/core/AocException.cpp
        ../cpp/core/AocException.h
        ../cpp/algorithms/ZoneFinderFloodFill.cpp
        ../cpp/algorithms/ZoneFinderFloodFill.h
        algorithms/ZoneFinderFloodFillTests.cpp
        ../cpp/algorithms/GridZones.h
        ../cpp/algorithms/Zone.cpp
        ../cpp/algorithms/Zone.h
        algorithms/ZoneTests.cpp
        ../cpp/day13/ClawMachine.cpp
        ../cpp/day13/ClawMachine.h
        day13/ClawMachineTests.cpp
        ../cpp/day13/Day13.cpp
        ../cpp/day13/Day13.h
        ../cpp/day14/Day14.cpp
        ../cpp/day14/Day14.h
        ../cpp/day15/Day15.cpp
        ../cpp/day15/Day15.h
        ../cpp/day14/Robot.cpp
        ../cpp/day14/Robot.h
        day14/RobotTests.cpp
        ../cpp/day15/Warehouse.cpp
        ../cpp/day15/Warehouse.h
        day15/WarehouseTests.cpp
        ../cpp/day15/Box.h
        ../cpp/day15/Wall.h
        ../cpp/day15/Robot.h
        ../cpp/day15/DirectionQueue.cpp
        ../cpp/day15/DirectionQueue.h
        day15/DirectionQueueTests.cpp
        ../cpp/day7/Equation.cpp
        ../cpp/day7/Equation.h
        day7/EquationTests.cpp
        ../cpp/day16/Day16.cpp
        ../cpp/day16/Day16.h
        ../cpp/day17/Day17.cpp
        ../cpp/day17/Day17.h
        ../cpp/day18/Day18.cpp
        ../cpp/day18/Day18.h
        ../cpp/day19/Day19.cpp
        ../cpp/day19/Day19.h
        ../cpp/day20/Day20.cpp
        ../cpp/day20/Day20.h
        ../cpp/algorithms/pathfinding/AStarPathFinder.cpp
        ../cpp/algorithms/pathfinding/AStarPathFinder.h
        ../cpp/algorithms/pathfinding/MazeTile.h
        ../cpp/algorithms/pathfinding/Maze.cpp
        ../cpp/algorithms/pathfinding/Maze.h
        algorithms/pathfinding/MazeTests.cpp
        algorithms/pathfinding/AStarPathFinderTests.cpp
        ../cpp/day17/ChronospatialComputer.cpp
        ../cpp/day17/ChronospatialComputer.h
        day17/ChronospatialComputerTests.cpp
        ../cpp/day17/Instruction.h
        ../cpp/day17/ADVInstruction.h
        ../cpp/day17/BDVInstruction.h
        ../cpp/day17/CDVInstruction.h
        ../cpp/day17/BXLInstruction.h
        ../cpp/day17/BSTInstruction.h
        ../cpp/day17/JNZInstruction.h
        ../cpp/day17/BXCInstruction.h
        ../cpp/day17/OUTInstruction.h
        day17/ADVInstructionTests.cpp
        day17/BXLInstructionTests.cpp
        day17/BSTInstructionTests.cpp
        day17/JNZInstructionTests.cpp
        day17/BXCInstructionTests.cpp
        day17/OUTInstructionTests.cpp
        day17/BDVInstructionTests.cpp
        day17/CDVInstructionTests.cpp
        ../cpp/day18/MemorySpace.cpp
        ../cpp/day18/MemorySpace.h
        ../cpp/day18/CorruptedByte.h
        ../cpp/day18/FreeByte.h
        ../cpp/day18/Byte.h
        day18/MemorySpaceTests.cpp
        ../cpp/algorithms/pathfinding/DijkstraPathFinder.cpp
        ../cpp/algorithms/pathfinding/DijkstraPathFinder.h
        algorithms/pathfinding/DijkstraPathFinderTests.cpp
        ../cpp/day19/Pattern.h
        ../cpp/day19/PatternHolder.h
        day19/PatternHolderTests.cpp
        ../cpp/day19/PatternFinder.cpp
        ../cpp/day19/PatternFinder.h
        day19/PatternFinderTests.cpp
        ../cpp/day20/RaceTrack.cpp
        ../cpp/day20/RaceTrack.h
        day20/RaceTrackTests.cpp
        ../cpp/core/HashConfig.h
        ../cpp/day20/RaceTrackCheatFinder.cpp
        ../cpp/day20/RaceTrackCheatFinder.h
        day20/RaceTrackCheatFindertESTS.cpp
        ../cpp/algorithms/pathfinding/BFSPathFinder.cpp
        ../cpp/algorithms/pathfinding/BFSPathFinder.h
        ../cpp/day22/SecretModifier.h
        day22/SecretModifierTests.cpp
        ../cpp/day22/SecretEvolver.cpp
        ../cpp/day22/SecretEvolver.h
        day22/SecretEvolverTests.cpp
        ../cpp/day22/Day22.cpp
        ../cpp/day22/Day22.h
)

# Set optimization flags for Release configuration

target_link_libraries(Google_Tests_run gtest gtest_main)